feat: add log instrumentation
