# main.go
@@ -31,7 +31,7 @@ func main() {
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	r.POST("/create", middleware.BasicAuth(), controllers.CreateSite)
 	r.POST("/start", middleware.BasicAuth(), controllers.StartScan)
-	r.GET("/list", controllers.ListScans)
+	r.GET("/list", middleware.BasicAuth(), controllers.ListScans)
 	r.GET("/results/:scanId", middleware.BasicAuth(), controllers.GetScanResult)
 
 	r.Run()
